--- a/cars.html
+++ b/cars.html
@@ -229,8 +229,8 @@
         <meta charset="8e"><div class="divayar"><h1 style="color: aliceblue;"><b class="textayar">Rentcars.  <table align="right">
             <tr>
                 <td style="color: white;"><i class="fa-solid fa-house"></i>Home</td>
-                <td><a href="https://ferko20078.github.io/car./about.html"><i class="fa-solid fa-address-card"></i>About</a></td>
-                <td><a href="https://ferko20078.github.io/car./contact.html"><i class="fa-solid fa-address-book"></i>Contact</a></td>
+                <td><a href="https://ferko20078.github.io/about/about.html"><i class="fa-solid fa-address-card"></i>About</a></td>
+                <td><a href="https://ferko20078.github.io/contact./contact.html"><i class="fa-solid fa-address-book"></i>Contact</a></td>
                 <td><a href="https://ferko20078.github.io/daxil/daxil%20ol.html"><i class="fa-solid fa-right-to-bracket"></i>Login</a></td>
             </tr>
         </table> </b></h1>
