--- a/cars.html
+++ b/cars.html
@@ -251,25 +251,25 @@
                 <div class="car">
                     <div class="carhead">
                         <span>Mercedes</span>
-                        <button class="btn1"><a href="https://ferko20078.github.io/car./merc.html">Details</a></button>
+                        <button class="btn1"><a href="https://ferko20078.github.io/cart/merc.html">Details</a></button>
                     </div>
                 </div>
                 <div class="car1">
                     <div class="carhead">
                         <span>BMW</span>
-                        <button class="btn2"><a href="https://ferko20078.github.io/car./bmw.html">Details</a></button>
+                        <button class="btn2"><a href="https://ferko20078.github.io/cart/bmw.html">Details</a></button>
                     </div>
                 </div>
                 <div class="car2">
                     <div class="carhead">
                         <span>NISSAN</span>
-                        <button class="btn3"><a href="https://ferko20078.github.io/car./nissan.html">Details</a></button>
+                        <button class="btn3"><a href="https://ferko20078.github.io/cart/nissan.html">Details</a></button>
                     </div>
                 </div>
                 <div class="car3">
                     <div class="carhead">
                         <span>TESLA</span>
-                        <button class="btn4"><a href="https://ferko20078.github.io/car./tesla.html">Details</a></button>
+                        <button class="btn4"><a href="https://ferko20078.github.io/cart/tesla.html">Details</a></button>
                     </div>
                 </div>
             </div>
