--- a/cars.html
+++ b/cars.html
@@ -76,7 +76,7 @@
         .car1{
             width: 160;
             height: 210;
-            background-image:url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motorbiscuit.com%2Fhow-much-does-fully-loaded-2024-bmw-3-series-cost%2F&psig=AOvVaw1glHquS8brGjFrtBA92pvG&ust=1722797527689000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMituIq_2YcDFQAAAAAdAAAAABAE");
+            background-image:url("https://hips.hearstapps.com/hmg-prod/images/2024-mercedes-benz-gla-103-64130fa2909a4.jpguS8brGjFrtBA92pvG&ust=1722797527689000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMituIq_2YcDFQAAAAAdAAAAABAE");
             background-position:center;
             background-size: cover;
             border-radius: 20px;
