--- a/cars.html
+++ b/cars.html
@@ -76,7 +76,7 @@
         .car1{
             width: 160;
             height: 210;
-            background-image:url("https://hips.hearstapps.com/hmg-prod/images/2024-mercedes-benz-gla-103-64130fa2909a4.jpguS8brGjFrtBA92pvG&ust=1722797527689000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMituIq_2YcDFQAAAAAdAAAAABAE");
+            background-image:url("https://di-uploads-pod21.dealerinspire.com/bmwofnorthwestarkansas/uploads/2024/01/2024-BMW-3-Series-front.png");
             background-position:center;
             background-size: cover;
             border-radius: 20px;
